# firmware-uhk80

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
boards/arm/uhk-dongle/: uhk-dongle.dts
device/: CMakeLists.txt  Kconfig  prj.conf
device/prj.conf.overlays/: ble-hid.conf  uhk-dongle.prj.conf
device/src/: bt_central_uart.c  bt_peripheral_uart.c  bt_scan.c  main.c
device/src/keyboard/: uart.c
device/src/usb/: hid_battery_app.hpp  usb.cpp  usb.h  usb_compatibility.cpp
right/src/: CMakeLists.txt  led_manager.c  power_mode.c  usb_report_updater.c  utils.c
right/src/macros/: scancode_commands.c
right/src/usb_interfaces/: usb_interface_mouse.h
scripts/: make-release.mjs
shared/: CMakeLists.txt
